force-app/main/default/objects/Account/fields/Acccount_Executive__c.field-meta.xml
<CustomField>
    <fullName>Acccount_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acccount Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>