force-app/main/default/objects/Account/fields/Channel_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Program_Name__c</fullName>
    <label>Channel Program Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>