force-app/main/default/objects/Account/fields/DAY_values__c.field-meta.xml
<CustomField>
    <fullName>DAY_values__c</fullName>
    <formula>TEXT(DAY(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DAY values</label>
    <type>Text</type>
</CustomField>