force-app/main/default/objects/Account/fields/max_Salary__c.field-meta.xml
<CustomField>
    <fullName>max_Salary__c</fullName>
    <label>max Salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>