force-app/main/default/objects/Account/fields/min_Salary__c.field-meta.xml
<CustomField>
    <fullName>min_Salary__c</fullName>
    <label>min Salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>