force-app/main/default/objects/Account/fields/Num_of_hr__c.field-meta.xml
<CustomField>
    <fullName>Num_of_hr__c</fullName>
    <formula>(End_Date__c-Start_Date__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num of hr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>