force-app/main/default/objects/Account/fields/NumOfActiveContacts__c.field-meta.xml
<CustomField>
    <fullName>NumOfActiveContacts__c</fullName>
    <label>NumOfActiveContacts</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>