force-app/main/default/objects/Account/fields/QuipField__c.field-meta.xml
<CustomField>
    <fullName>QuipField__c</fullName>
    <label>QuipField</label>
    <type>Url</type>
</CustomField>