force-app/main/default/objects/Account/fields/Standard_Discount__c.field-meta.xml
<CustomField>
    <fullName>Standard_Discount__c</fullName>
    <description>As per RITM5664683, Value populates based on LOB, Sales Region, Fulfilment Method, Voice Discount Level and Discount Code.</description>
    <label>Standard Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>