force-app/main/default/objects/Account/listViews/MY_territory.listView-meta.xml
<ListView>
    <fullName>MY_territory</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>MyTerritory</filterScope>
    <label>MY territory</label>
</ListView>